# future-ice-avalanches

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
configs/: config.yaml  features.yaml  predict.yaml  sweep.yaml  sweep_feature_run1.yaml  sweep_feature_run2.yaml  sweep_features_run3.yaml  train.yaml
scripts/: create_base_layer.py  create_folds_and_labels.py  extract_terrain_features.py  filter_events.py  merge_geoms_events.py  predict.py  preprocess_geoms.py  train.py
src/future_ice_avalanches/: paths.py  utils.py
src/future_ice_avalanches/data/: events_preprocessing.py  raster_preprocessing.py  terrain_features.py
src/future_ice_avalanches/models/: data.py  models.py  training.py
